tests/invalid/typeclass_dup_method_mode.err_exp
typeclass_dup_method_mode.m:010: In mode declarations for type class predicate
typeclass_dup_method_mode.m:010:   method `typeclass_dup_method_mode.p'/1:
typeclass_dup_method_mode.m:010:   error: duplicate mode declaration.
typeclass_dup_method_mode.m:010:   Modes `p(in) is semidet' and `p(in) is det'
typeclass_dup_method_mode.m:010:   are indistinguishable.
typeclass_dup_method_mode.m:011:   Here is the conflicting mode declaration.
